elasticsearch: 5.0.0-alpha5 dirty-read test