@@ -3,7 +3,18 @@
   :url "http://example.com/FIXME"
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :dependencies [[org.clojure/clojure "1.6.0"]
-                 [clj-http "1.1.0"]
-                 [jepsen "0.0.4-SNAPSHOT"]
-                 [clojurewerkz/elastisch "2.2.0-beta2"]])
+  :dependencies [[org.clojure/clojure "1.8.0"]
+                 [clj-http "3.1.0"]
+                 [cheshire "5.6.2"]
+                 [jepsen "0.1.3-SNAPSHOT"]
+                 [org.elasticsearch.client/transport "5.0.0-alpha5"]]
+  :jvm-opts ["-Xmx32g"
+             "-XX:+UseConcMarkSweepGC"
+             "-XX:+UseParNewGC"
+             "-XX:+CMSParallelRemarkEnabled"
+             "-XX:+AggressiveOpts"
+             "-XX:+UseFastAccessorMethods"
+             "-XX:-OmitStackTraceInFastThrow"
+             "-XX:MaxInlineLevel=32"
+             "-XX:MaxRecursiveInlineLevel=2"
+             "-server"])
